fixed letter getting cut off

--- a/style.css
+++ b/style.css
@@ -100,21 +100,25 @@ body {
   height: 100%;
   top: 0;
   left: 0;
-  border-radius: var(--letter-border-radius);
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
-    rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
-    rgba(0, 0, 0, 0.07) 0px 16px 16px;
 }
 
 #letter-front img {
   width: 100%;
   height: auto;
   object-fit: cover;
+  border-radius: var(--letter-border-radius);
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
+    rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
+    rgba(0, 0, 0, 0.07) 0px 16px 16px;
 }
 #letter-back img {
   width: 100%;
   height: auto;
   object-fit: cover;
+  border-radius: var(--letter-border-radius);
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
+    rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
+    rgba(0, 0, 0, 0.07) 0px 16px 16px;
 }
 
 /* 
@@ -217,7 +221,7 @@ body {
   font-size: 0.3em;
   padding: 1em;
   position: absolute;
-  top: 80vh;
+  z-index: 2;
   left: 0;
   text-align: center;
   opacity: 0;
@@ -402,6 +406,7 @@ dialog {
   font-weight: 400;
   font-style: normal;
   font-size: 0.5em;
+  z-index: 1;
 }
 .one {
   top: 95vh;
